Add components about training screen

--- a/uSync/v9/DataTypes/BlockGridMainContent.config
+++ b/uSync/v9/DataTypes/BlockGridMainContent.config
@@ -301,6 +301,281 @@
       "stylesheet": "~/css/styles.css",
       "thumbnail": "~/App_Plugins/BlockIcons/form.png",
       "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
+    },
+    {
+      "allowAtRoot": true,
+      "allowInAreas": true,
+      "areaGridColumns": null,
+      "areas": [
+        {
+          "alias": "text",
+          "columnSpan": 6,
+          "createLabel": "Add Text Or Image",
+          "key": "5a7d6816-a685-4042-b6b2-0eca98b59813",
+          "maxAllowed": null,
+          "minAllowed": 0,
+          "rowSpan": 1,
+          "specifiedAllowance": [
+            {
+              "elementTypeKey": "b375f265-8d02-4325-8840-68499254977a",
+              "groupKey": null,
+              "maxAllowed": 1,
+              "minAllowed": null
+            },
+            {
+              "elementTypeKey": "455351d3-e544-4713-b831-2c80b809087c",
+              "groupKey": null,
+              "maxAllowed": 1,
+              "minAllowed": null
+            }
+          ]
+        },
+        {
+          "alias": "image",
+          "columnSpan": 6,
+          "createLabel": "Add Text Or Image",
+          "key": "8a3da1e0-c36e-444f-bdb5-350164c1be23",
+          "maxAllowed": null,
+          "minAllowed": 0,
+          "rowSpan": 1,
+          "specifiedAllowance": [
+            {
+              "elementTypeKey": "b375f265-8d02-4325-8840-68499254977a",
+              "groupKey": null,
+              "maxAllowed": 1,
+              "minAllowed": null
+            },
+            {
+              "elementTypeKey": "455351d3-e544-4713-b831-2c80b809087c",
+              "groupKey": null,
+              "maxAllowed": 1,
+              "minAllowed": null
+            }
+          ]
+        }
+      ],
+      "backgroundColor": null,
+      "columnSpanOptions": [],
+      "contentElementTypeKey": "a1fbc819-98b9-47f7-a2d6-59a1fec0fd3a",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": null,
+      "iconColor": null,
+      "inlineEditing": false,
+      "label": "",
+      "rowMaxSpan": 1,
+      "rowMinSpan": 1,
+      "settingsElementTypeKey": null,
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "allowAtRoot": false,
+      "allowInAreas": true,
+      "areaGridColumns": null,
+      "areas": [],
+      "backgroundColor": null,
+      "columnSpanOptions": [
+        {
+          "columnSpan": 4
+        },
+        {
+          "columnSpan": 6
+        }
+      ],
+      "contentElementTypeKey": "2986cd44-bcdd-474d-b9c2-eb85eb47e5ed",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": null,
+      "iconColor": null,
+      "inlineEditing": false,
+      "label": "",
+      "rowMaxSpan": 1,
+      "rowMinSpan": 1,
+      "settingsElementTypeKey": null,
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "allowAtRoot": true,
+      "allowInAreas": false,
+      "areaGridColumns": null,
+      "areas": [
+        {
+          "alias": "uploade-PDF",
+          "columnSpan": 12,
+          "createLabel": "Add PDF",
+          "key": "9344981d-f06f-413d-ab42-0f0033e7e580",
+          "maxAllowed": null,
+          "minAllowed": 0,
+          "rowSpan": 1,
+          "specifiedAllowance": [
+            {
+              "elementTypeKey": "2986cd44-bcdd-474d-b9c2-eb85eb47e5ed",
+              "groupKey": null,
+              "maxAllowed": null,
+              "minAllowed": null
+            }
+          ]
+        }
+      ],
+      "backgroundColor": null,
+      "columnSpanOptions": [],
+      "contentElementTypeKey": "53dfa5a6-8958-45e6-a12f-0348290591a0",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": null,
+      "iconColor": null,
+      "inlineEditing": false,
+      "label": "",
+      "rowMaxSpan": 1,
+      "rowMinSpan": 1,
+      "settingsElementTypeKey": null,
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "allowAtRoot": false,
+      "allowInAreas": true,
+      "areaGridColumns": null,
+      "areas": [],
+      "backgroundColor": null,
+      "columnSpanOptions": [],
+      "contentElementTypeKey": "9db1ac16-e3dc-4039-86fa-246e776e420a",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": null,
+      "iconColor": null,
+      "inlineEditing": false,
+      "label": "",
+      "rowMaxSpan": 1,
+      "rowMinSpan": 1,
+      "settingsElementTypeKey": null,
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "allowAtRoot": false,
+      "allowInAreas": true,
+      "areaGridColumns": null,
+      "areas": [],
+      "backgroundColor": null,
+      "columnSpanOptions": [],
+      "contentElementTypeKey": "171a83a6-8a1b-42ed-833b-c73ac50a22d5",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": null,
+      "iconColor": null,
+      "inlineEditing": false,
+      "label": "",
+      "rowMaxSpan": 1,
+      "rowMinSpan": 1,
+      "settingsElementTypeKey": null,
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "allowAtRoot": true,
+      "allowInAreas": false,
+      "areaGridColumns": null,
+      "areas": [
+        {
+          "alias": "text",
+          "columnSpan": 6,
+          "createLabel": "Add Text",
+          "key": "946b29af-eefe-4188-81b3-9952b10ed5ff",
+          "maxAllowed": null,
+          "minAllowed": 0,
+          "rowSpan": 1,
+          "specifiedAllowance": [
+            {
+              "elementTypeKey": "9db1ac16-e3dc-4039-86fa-246e776e420a",
+              "groupKey": null,
+              "maxAllowed": 1,
+              "minAllowed": null
+            }
+          ]
+        },
+        {
+          "alias": "accordion",
+          "columnSpan": 6,
+          "createLabel": "Add Accordion",
+          "key": "3bb12ea7-ab83-413c-8a90-beee9c1a4fcb",
+          "maxAllowed": null,
+          "minAllowed": 0,
+          "rowSpan": 1,
+          "specifiedAllowance": [
+            {
+              "elementTypeKey": "171a83a6-8a1b-42ed-833b-c73ac50a22d5",
+              "groupKey": null,
+              "maxAllowed": null,
+              "minAllowed": null
+            }
+          ]
+        }
+      ],
+      "backgroundColor": null,
+      "columnSpanOptions": [],
+      "contentElementTypeKey": "db73146e-0f3f-44fd-bb73-d97d680725b4",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": null,
+      "iconColor": null,
+      "inlineEditing": false,
+      "label": "",
+      "rowMaxSpan": 1,
+      "rowMinSpan": 1,
+      "settingsElementTypeKey": null,
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "allowAtRoot": true,
+      "allowInAreas": true,
+      "areaGridColumns": null,
+      "areas": [],
+      "backgroundColor": null,
+      "columnSpanOptions": [],
+      "contentElementTypeKey": "ac1e6b74-13c1-4714-896d-84e4fa10a6fc",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": null,
+      "iconColor": null,
+      "inlineEditing": false,
+      "label": "",
+      "rowMaxSpan": 1,
+      "rowMinSpan": 1,
+      "settingsElementTypeKey": null,
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
+    },
+    {
+      "allowAtRoot": true,
+      "allowInAreas": false,
+      "areaGridColumns": null,
+      "areas": [],
+      "backgroundColor": null,
+      "columnSpanOptions": [],
+      "contentElementTypeKey": "d6ed994a-ddbc-459b-9760-656248290a9f",
+      "editorSize": "medium",
+      "forceHideContentEditorInOverlay": false,
+      "groupKey": null,
+      "iconColor": null,
+      "inlineEditing": false,
+      "label": "",
+      "rowMaxSpan": 1,
+      "rowMinSpan": 1,
+      "settingsElementTypeKey": null,
+      "stylesheet": null,
+      "thumbnail": null,
+      "view": null
     }
   ],
   "CreateLabel": null,
