--- a/uSync/v9/DataTypes/MediaPicker.config
+++ b/uSync/v9/DataTypes/MediaPicker.config
@@ -6,9 +6,9 @@
     <DatabaseType>Ntext</DatabaseType>
   </Info>
   <Config><![CDATA[{
-  "Crops": null,
+  "Crops": [],
   "EnableLocalFocalPoint": false,
-  "Filter": null,
+  "Filter": "pDFFile",
   "IgnoreUserStartNodes": false,
   "Multiple": false,
   "StartNodeId": null,
