--- a/uSync/v9/Content/contact.config
+++ b/uSync/v9/Content/contact.config
@@ -57,6 +57,89 @@
         "areas": [],
         "columnSpan": 12,
         "rowSpan": 1
+      },
+      {
+        "contentUdi": "umb://element/36349f228dae469fb47d335a1e532544",
+        "areas": [
+          {
+            "key": "946b29af-eefe-4188-81b3-9952b10ed5ff",
+            "items": [
+              {
+                "contentUdi": "umb://element/e2a6a7dde34d48b5a738ce20b742bdba",
+                "areas": [],
+                "columnSpan": 6,
+                "rowSpan": 1
+              }
+            ]
+          },
+          {
+            "key": "3bb12ea7-ab83-413c-8a90-beee9c1a4fcb",
+            "items": [
+              {
+                "contentUdi": "umb://element/8282404f9bc94f8ab8db72100d39b3c2",
+                "areas": [],
+                "columnSpan": 6,
+                "rowSpan": 1
+              },
+              {
+                "contentUdi": "umb://element/fca61c521ad24dbc9d81c6347389c886",
+                "areas": [],
+                "columnSpan": 6,
+                "rowSpan": 1
+              },
+              {
+                "contentUdi": "umb://element/2cdd9345f4484c6fa3071c1320a76574",
+                "areas": [],
+                "columnSpan": 6,
+                "rowSpan": 1
+              }
+            ]
+          }
+        ],
+        "columnSpan": 12,
+        "rowSpan": 1
+      },
+      {
+        "contentUdi": "umb://element/16d5d65b6a1b435eb1828d12e37943fe",
+        "areas": [],
+        "columnSpan": 12,
+        "rowSpan": 1
+      },
+      {
+        "contentUdi": "umb://element/895e6b26ad254ed0afca1c5cf1ff7332",
+        "areas": [
+          {
+            "key": "9344981d-f06f-413d-ab42-0f0033e7e580",
+            "items": [
+              {
+                "contentUdi": "umb://element/802718b275d94b299ffad1497c304c27",
+                "areas": [],
+                "columnSpan": 4,
+                "rowSpan": 1
+              },
+              {
+                "areas": [],
+                "columnSpan": 4,
+                "rowSpan": 1,
+                "contentUdi": "umb://element/599a3eb9901941e7ab8d9bee03d003bb"
+              },
+              {
+                "areas": [],
+                "columnSpan": 4,
+                "rowSpan": 1,
+                "contentUdi": "umb://element/a2f6a3ef23994ee3b82f26c918d5c613"
+              }
+            ]
+          }
+        ],
+        "columnSpan": 12,
+        "rowSpan": 1
+      },
+      {
+        "contentUdi": "umb://element/1fc547e817b645ec9506c8fb4a4aad5b",
+        "areas": [],
+        "columnSpan": 12,
+        "rowSpan": 1
       }
     ]
   },
@@ -64,6 +147,124 @@
     {
       "contentTypeKey": "a1b265bb-c44e-4750-852f-6e1be91cf404",
       "udi": "umb://element/5f433f6b3ff046f885ac7c8923ab097c"
+    },
+    {
+      "contentTypeKey": "db73146e-0f3f-44fd-bb73-d97d680725b4",
+      "udi": "umb://element/36349f228dae469fb47d335a1e532544"
+    },
+    {
+      "contentTypeKey": "9db1ac16-e3dc-4039-86fa-246e776e420a",
+      "udi": "umb://element/e2a6a7dde34d48b5a738ce20b742bdba",
+      "text": {
+        "markup": "<h2 class=\"text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl\">Training Workshops</h2>\n<p class=\"m-0\">In support of concepts and practices of professional development and lifelong learning, NIHS works on preparing policies and standards for accrediting institutions and programs for continuing professional development. The institute also cooperates with health authorities to develop the national registry of health practitioners, which enables building a continuing professional development database.<br><br>In addition, that will lead to program homogeneity and exchange information to ensure the quality of the health workforce. Continuing professional development is important part of workforce development system in the UAE and NIHS will work with partners to adopt the best policies and the highest professional standards in this aspect.</p>\n<h4 class=\"text-base sm:text-lg md:text-xl lg:text-2xl\">Workshop Registration Form</h4>\n<p class=\"m-0\">You may also visit a service centre in the United Arab Emirates to obtain the service</p>",
+        "blocks": {
+          "contentData": [],
+          "settingsData": []
+        }
+      },
+      "link": [
+        {
+          "name": "Apply Here",
+          "udi": "umb://document/cc7930b8e24d4b7cb08085412a3c9b45"
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "171a83a6-8a1b-42ed-833b-c73ac50a22d5",
+      "udi": "umb://element/8282404f9bc94f8ab8db72100d39b3c2",
+      "title": "Day-01",
+      "body": {
+        "markup": "<h2 class=\"text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl\">Training Workshops</h2>\n<p class=\"m-0\">In support of concepts and practices of professional development and lifelong learning, NIHS works on preparing policies and standards for accrediting institutions and programs for continuing professional development. The institute also cooperates with health authorities to develop the national registry of health practitioners, which enables building a continuing professional development database.<br><br>In addition, that will lead to program homogeneity and exchange information to ensure the quality of the health workforce. Continuing professional development is important part of workforce development system in the UAE and NIHS will work with partners to adopt the best policies and the highest professional standards in this aspect.</p>\n<h4 class=\"text-base sm:text-lg md:text-xl lg:text-2xl\">Workshop Registration Form</h4>\n<p class=\"m-0\">You may also visit a service centre in the United Arab Emirates to obtain the service</p>",
+        "blocks": {
+          "contentData": [],
+          "settingsData": []
+        }
+      }
+    },
+    {
+      "contentTypeKey": "171a83a6-8a1b-42ed-833b-c73ac50a22d5",
+      "udi": "umb://element/fca61c521ad24dbc9d81c6347389c886",
+      "title": "Day-01",
+      "body": {
+        "markup": "<h2 class=\"text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl\">Training Workshops</h2>\n<p class=\"m-0\">In support of concepts and practices of professional development and lifelong learning, NIHS works on preparing policies and standards for accrediting institutions and programs for continuing professional development. The institute also cooperates with health authorities to develop the national registry of health practitioners, which enables building a continuing professional development database.<br><br>In addition, that will lead to program homogeneity and exchange information to ensure the quality of the health workforce. Continuing professional development is important part of workforce development system in the UAE and NIHS will work with partners to adopt the best policies and the highest professional standards in this aspect.</p>\n<h4 class=\"text-base sm:text-lg md:text-xl lg:text-2xl\">Workshop Registration Form</h4>\n<p class=\"m-0\">You may also visit a service centre in the United Arab Emirates to obtain the service</p>",
+        "blocks": {
+          "contentData": [],
+          "settingsData": []
+        }
+      }
+    },
+    {
+      "contentTypeKey": "171a83a6-8a1b-42ed-833b-c73ac50a22d5",
+      "udi": "umb://element/2cdd9345f4484c6fa3071c1320a76574",
+      "title": "Day-01",
+      "body": {
+        "markup": "<h2 class=\"text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl\">Training Workshops</h2>\n<p class=\"m-0\">In support of concepts and practices of professional development and lifelong learning, NIHS works on preparing policies and standards for accrediting institutions and programs for continuing professional development. The institute also cooperates with health authorities to develop the national registry of health practitioners, which enables building a continuing professional development database.<br><br>In addition, that will lead to program homogeneity and exchange information to ensure the quality of the health workforce. Continuing professional development is important part of workforce development system in the UAE and NIHS will work with partners to adopt the best policies and the highest professional standards in this aspect.</p>\n<h4 class=\"text-base sm:text-lg md:text-xl lg:text-2xl\">Workshop Registration Form</h4>\n<p class=\"m-0\">You may also visit a service centre in the United Arab Emirates to obtain the service</p>",
+        "blocks": {
+          "contentData": [],
+          "settingsData": []
+        }
+      }
+    },
+    {
+      "contentTypeKey": "ac1e6b74-13c1-4714-896d-84e4fa10a6fc",
+      "udi": "umb://element/16d5d65b6a1b435eb1828d12e37943fe",
+      "image": [
+        {
+          "key": "89abbe6a-d103-47ed-8f67-609d361e5ea0",
+          "mediaKey": "08b4ae63-ad37-4342-a087-e2060715ac0a"
+        }
+      ],
+      "title": "ECME Emirati Conference on Medical Education 2025",
+      "shortDescription": "The successful Emirati Medical Education Conferences, organized by the National Institute for Health Specialties (NIHS) over the past two years, have become a cornerstone in the field. Building on this success, the NIHS is committed to continuing this series, with the next conference scheduled for February 15-16, 2025.",
+      "link": [
+        {
+          "name": "Visit Now",
+          "udi": "umb://document/cc7930b8e24d4b7cb08085412a3c9b45"
+        }
+      ]
+    },
+    {
+      "contentTypeKey": "53dfa5a6-8958-45e6-a12f-0348290591a0",
+      "udi": "umb://element/895e6b26ad254ed0afca1c5cf1ff7332"
+    },
+    {
+      "contentTypeKey": "2986cd44-bcdd-474d-b9c2-eb85eb47e5ed",
+      "udi": "umb://element/802718b275d94b299ffad1497c304c27",
+      "title": "Day-01",
+      "uploadPDF": "umb://media/937eff91522942aaabd86821a0a78b62"
+    },
+    {
+      "contentTypeKey": "2986cd44-bcdd-474d-b9c2-eb85eb47e5ed",
+      "udi": "umb://element/599a3eb9901941e7ab8d9bee03d003bb",
+      "title": "Day-01",
+      "uploadPDF": "umb://media/937eff91522942aaabd86821a0a78b62"
+    },
+    {
+      "contentTypeKey": "2986cd44-bcdd-474d-b9c2-eb85eb47e5ed",
+      "udi": "umb://element/a2f6a3ef23994ee3b82f26c918d5c613",
+      "title": "Day-01",
+      "uploadPDF": "umb://media/937eff91522942aaabd86821a0a78b62"
+    },
+    {
+      "contentTypeKey": "d6ed994a-ddbc-459b-9760-656248290a9f",
+      "udi": "umb://element/1fc547e817b645ec9506c8fb4a4aad5b",
+      "shortDescription": "You can help us improve by providing your feedback about your experience.",
+      "option1": "Yes",
+      "option2": "No",
+      "image": [
+        {
+          "key": "8988da14-9e45-4c95-b187-27dfaa01b915",
+          "mediaKey": "fab53eaa-3036-4628-b072-647b63ea7682"
+        }
+      ],
+      "link": [
+        {
+          "name": "Give us for feedback",
+          "udi": "umb://document/cc7930b8e24d4b7cb08085412a3c9b45"
+        }
+      ],
+      "questionContent": "",
+      "questionService": "Have you used our services at our service centre or digitally recently?"
     }
   ],
   "settingsData": []
