--- a/uSync/v9/DataTypes/BlockGridMainContent.config
+++ b/uSync/v9/DataTypes/BlockGridMainContent.config
@@ -346,7 +346,7 @@
               "minAllowed": null
             },
             {
-              "elementTypeKey": "455351d3-e544-4713-b831-2c80b809087c",
+              "elementTypeKey": "0733cfa5-6b36-4756-b635-38b8e5b8c90b",
               "groupKey": null,
               "maxAllowed": 1,
               "minAllowed": null
@@ -394,9 +394,9 @@
       "rowMaxSpan": 1,
       "rowMinSpan": 1,
       "settingsElementTypeKey": null,
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
     },
     {
       "allowAtRoot": true,
@@ -454,9 +454,9 @@
       "rowMaxSpan": 1,
       "rowMinSpan": 1,
       "settingsElementTypeKey": null,
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
     },
     {
       "allowAtRoot": false,
@@ -475,9 +475,9 @@
       "rowMaxSpan": 1,
       "rowMinSpan": 1,
       "settingsElementTypeKey": null,
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
     },
     {
       "allowAtRoot": true,
@@ -552,9 +552,9 @@
       "rowMaxSpan": 1,
       "rowMinSpan": 1,
       "settingsElementTypeKey": null,
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
     },
     {
       "allowAtRoot": true,
@@ -573,9 +573,9 @@
       "rowMaxSpan": 1,
       "rowMinSpan": 1,
       "settingsElementTypeKey": null,
-      "stylesheet": null,
+      "stylesheet": "~/css/styles.css",
       "thumbnail": null,
-      "view": null
+      "view": "~/App_Plugins/Umbraco.Community.BlockPreview/views/block-preview.html"
     }
   ],
   "CreateLabel": null,
