--- a/appsettings.json
+++ b/appsettings.json
@@ -16,16 +16,16 @@
                 "Id": "b78e521b-d574-4580-9d19-9847a9013287",
                 "SanitizeTinyMce": true
             },
-            "Content": {
-                "AllowEditInvariantFromNonDefault": true,
-                "ContentVersionCleanupPolicy": {
-                    "EnableCleanup": true
-                },
-                // Edit login page 
-                "LoginBackgroundImage": "/img/login-background-image.jpg",
-                "LoginLogoImage": "/img/login-logo.png"
-
+          "Content": {
+            "AllowEditInvariantFromNonDefault": true,
+            "ContentVersionCleanupPolicy": {
+              "EnableCleanup": true
             },
+            // Edit login page 
+            "LoginBackgroundImage": "/Images/NIHS-logo.svg",
+            "LoginLogoImage": ""
+
+          },
             "Unattended": {
                 "UpgradeUnattended": true
             },
