export usync content

--- a/uSync/v9/Content/site-settings.config
+++ b/uSync/v9/Content/site-settings.config
@@ -210,25 +210,25 @@
             "key": "3bbe5f75-f346-425d-b0e6-9ccb3c193fb2",
             "items": [
               {
-                "contentUdi": "umb://element/7c9098f7f11a4e6fb1d8622e8b1e217b",
-                "areas": [],
-                "columnSpan": 2,
-                "rowSpan": 1
-              },
-              {
-                "contentUdi": "umb://element/85eaacb3dd2f4641a821786e9e849d89",
-                "areas": [],
-                "columnSpan": 2,
-                "rowSpan": 1
-              },
-              {
-                "contentUdi": "umb://element/4560af254d314e4f962b58c9ec03469b",
-                "areas": [],
-                "columnSpan": 2,
-                "rowSpan": 1
-              },
-              {
                 "contentUdi": "umb://element/696df3d8f53a48248aa5a5fc5cbb4b8f",
+                "areas": [],
+                "columnSpan": 2,
+                "rowSpan": 1
+              },
+              {
+                "contentUdi": "umb://element/57ae863ccf4b46fa8379bbcc30299ea8",
+                "areas": [],
+                "columnSpan": 2,
+                "rowSpan": 1
+              },
+              {
+                "contentUdi": "umb://element/879f6714d02241279d2fb7cf0186928c",
+                "areas": [],
+                "columnSpan": 2,
+                "rowSpan": 1
+              },
+              {
+                "contentUdi": "umb://element/d42e354af78f472da30ca80410b64519",
                 "areas": [],
                 "columnSpan": 2,
                 "rowSpan": 1
@@ -246,7 +246,19 @@
                 "rowSpan": 1
               },
               {
-                "contentUdi": "umb://element/4b63d2e30b3c4120bd3d53a88f851c3f",
+                "contentUdi": "umb://element/4560af254d314e4f962b58c9ec03469b",
+                "areas": [],
+                "columnSpan": 2,
+                "rowSpan": 1
+              },
+              {
+                "contentUdi": "umb://element/85eaacb3dd2f4641a821786e9e849d89",
+                "areas": [],
+                "columnSpan": 2,
+                "rowSpan": 1
+              },
+              {
+                "contentUdi": "umb://element/b0084703e3d14c12aeea3174763dc7e6",
                 "areas": [],
                 "columnSpan": 2,
                 "rowSpan": 1
@@ -278,42 +290,10 @@
     {
       "contentTypeKey": "115c9c6e-d8de-4b46-bd19-651b02c20fbe",
       "udi": "umb://element/b821e039bfd3449990ec0b0d787a010c",
-      "title": "Search",
+      "title": "Training",
       "link": [
         {
-          "udi": "umb://document/a6d2478909c34a8b958d5f6b7269c287"
-        }
-      ],
-      "childLinks": ""
-    },
-    {
-      "contentTypeKey": "115c9c6e-d8de-4b46-bd19-651b02c20fbe",
-      "udi": "umb://element/4b63d2e30b3c4120bd3d53a88f851c3f",
-      "title": "Dropdwon",
-      "link": "",
-      "childLinks": [
-        {
-          "name": "Home",
-          "udi": "umb://document/23af885007a545899b731ad0f3bd8daa"
-        },
-        {
-          "name": "About",
-          "udi": "umb://document/cb6f420697a04d288d310ae2b5be88a7"
-        },
-        {
-          "name": "Search",
-          "udi": "umb://document/a6d2478909c34a8b958d5f6b7269c287"
-        }
-      ]
-    },
-    {
-      "contentTypeKey": "115c9c6e-d8de-4b46-bd19-651b02c20fbe",
-      "udi": "umb://element/7c9098f7f11a4e6fb1d8622e8b1e217b",
-      "title": "Home",
-      "link": [
-        {
-          "name": "Home",
-          "udi": "umb://document/23af885007a545899b731ad0f3bd8daa"
+          "udi": "umb://document/6e6b620257f249b4a6dd3451045a9333"
         }
       ],
       "childLinks": ""
@@ -321,6 +301,17 @@
     {
       "contentTypeKey": "115c9c6e-d8de-4b46-bd19-651b02c20fbe",
       "udi": "umb://element/9d4fc9d9846149c88ce325ace58fa1d9",
+      "title": "E-Services",
+      "link": [
+        {
+          "udi": "umb://document/6b656e0c67344149b6b763cbb362b756"
+        }
+      ],
+      "childLinks": ""
+    },
+    {
+      "contentTypeKey": "115c9c6e-d8de-4b46-bd19-651b02c20fbe",
+      "udi": "umb://element/85eaacb3dd2f4641a821786e9e849d89",
       "title": "Contact Us",
       "link": [
         {
@@ -331,19 +322,52 @@
     },
     {
       "contentTypeKey": "115c9c6e-d8de-4b46-bd19-651b02c20fbe",
-      "udi": "umb://element/85eaacb3dd2f4641a821786e9e849d89",
-      "title": "New Page",
+      "udi": "umb://element/4560af254d314e4f962b58c9ec03469b",
+      "title": "Media Center",
       "link": [
         {
-          "udi": "umb://document/383047dea3524ca0b6190c141dd44132"
+          "udi": "umb://document/9e6a020b50c64c73968da8ab86e69f1d"
         }
       ],
       "childLinks": ""
     },
     {
       "contentTypeKey": "115c9c6e-d8de-4b46-bd19-651b02c20fbe",
-      "udi": "umb://element/4560af254d314e4f962b58c9ec03469b",
-      "title": "Sidebar ",
+      "udi": "umb://element/d42e354af78f472da30ca80410b64519",
+      "title": "Examination",
+      "link": [
+        {
+          "udi": "umb://document/1364abb6b6154e40846e67b0fb940637"
+        }
+      ],
+      "childLinks": ""
+    },
+    {
+      "contentTypeKey": "115c9c6e-d8de-4b46-bd19-651b02c20fbe",
+      "udi": "umb://element/879f6714d02241279d2fb7cf0186928c",
+      "title": "Assessment",
+      "link": [
+        {
+          "udi": "umb://document/75b364b452f44eff988d290e47454f44"
+        }
+      ],
+      "childLinks": ""
+    },
+    {
+      "contentTypeKey": "115c9c6e-d8de-4b46-bd19-651b02c20fbe",
+      "udi": "umb://element/57ae863ccf4b46fa8379bbcc30299ea8",
+      "title": "Accreditation",
+      "link": [
+        {
+          "udi": "umb://document/33fdf2e6018d4a94980302e391b22623"
+        }
+      ],
+      "childLinks": ""
+    },
+    {
+      "contentTypeKey": "115c9c6e-d8de-4b46-bd19-651b02c20fbe",
+      "udi": "umb://element/b0084703e3d14c12aeea3174763dc7e6",
+      "title": "side menu",
       "link": [
         {
           "udi": "umb://document/d03de1ae730448fd8d0bc2a1038e3695"
@@ -356,7 +380,7 @@
 }]]></Value>
     </mainNavigation>
     <siteName>
-      <Value><![CDATA[Fahmy Gharbia]]></Value>
+      <Value><![CDATA[National Institute for Health Specialties (NIHS)]]></Value>
     </siteName>
   </Properties>
 </Content>
