Update call new page from child sidebar

--- a/uSync/v9/ContentTypes/mainsidebar.config
+++ b/uSync/v9/ContentTypes/mainsidebar.config
@@ -22,6 +22,31 @@
     <AllowedTemplates />
   </Info>
   <Structure />
-  <GenericProperties />
-  <Tabs />
+  <GenericProperties>
+    <GenericProperty>
+      <Key>9f609b22-bb31-4a63-a99c-45a53e0c45f8</Key>
+      <Name>New Page</Name>
+      <Alias>newPage</Alias>
+      <Definition>92897bc6-a5f3-4ffe-ae27-f2e7e33dda49</Definition>
+      <Type>Umbraco.TrueFalse</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[Check true if you want to open page without sidebar.]]></Description>
+      <SortOrder>5</SortOrder>
+      <Tab Alias="content">Content</Tab>
+      <Variations>Nothing</Variations>
+      <MandatoryMessage></MandatoryMessage>
+      <ValidationRegExpMessage></ValidationRegExpMessage>
+      <LabelOnTop>false</LabelOnTop>
+    </GenericProperty>
+  </GenericProperties>
+  <Tabs>
+    <Tab>
+      <Key>3f395302-b326-4da7-a4ae-9dc2af40d472</Key>
+      <Caption>Content</Caption>
+      <Alias>content</Alias>
+      <Type>Tab</Type>
+      <SortOrder>20</SortOrder>
+    </Tab>
+  </Tabs>
 </ContentType>
