export all data

--- a/uSync/v9/Content/page-1.config
+++ b/uSync/v9/Content/page-1.config
@@ -58,5 +58,8 @@
   "settingsData": []
 }]]></Value>
     </mainContent>
+    <newPage>
+      <Value><![CDATA[]]></Value>
+    </newPage>
   </Properties>
 </Content>
