--- a/uSync/v9/Content/page-2.config
+++ b/uSync/v9/Content/page-2.config
@@ -41,5 +41,8 @@
   "settingsData": []
 }]]></Value>
     </mainContent>
+    <newPage>
+      <Value><![CDATA[]]></Value>
+    </newPage>
   </Properties>
 </Content>
